new changes made

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <div class="slideshow1">
         <div class="slide1">
             <img src="front1.webp">
+            <div class="writing1">
             <h1>Everest Maya Restaurant</h1>
             <p>Everest Maya is proud to bring you the taste of Himalayas, from the footsteps of Everest to food loving neighborhood of Firestone & Longmont Colorado. We are delighted to present you a unique combination of culinary mixtures that are tailored to your liking.</p>
             <button>VIEW MENU</button>
             <button>ORDER ONLINE</button>
+        </div>
         </div>
 
         <div class="slide2">
@@ -41,10 +43,12 @@
 
         <div class="slide3">
             <img src="front3.webp">
+            <div class="writing"></div>
             <h1>Rice & Curry</h1>
             <p>We're Serious about Spices.</p>
             <button>VIEW MENU</button>
             <button>ORDER ONLINE</button>
+        </div>
         </div>
 
 
