new changes made

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="slide1">
             <img src="front1.webp">
             <div class="writing1">
-            <h1>Everest Maya Restaurant</h1>
+            <h1>Everest <span style="color: red;">Maya</span> Restaurant</h1>
             <p>Everest Maya is proud to bring you the taste of Himalayas, from the footsteps of Everest to food loving neighborhood of Firestone & Longmont Colorado. We are delighted to present you a unique combination of culinary mixtures that are tailored to your liking.</p>
             <button>VIEW MENU</button>
             <button>ORDER ONLINE</button>
@@ -35,7 +35,7 @@
 
         <div class="slide2">
             <img src="front2.webp">
-            <h1>The taste of Mt. Everest</h1>
+            <h1>The taste of <span style="color: red;">Mt. Everest</span></h1>
             <p>From the doorsteps of Himalayas to the food-loving neighborhood of Firestone & Longmont neighborhood</p>
             <button>VIEW MENU</button>
             <button>ORDER ONLINE</button>
@@ -44,7 +44,7 @@
         <div class="slide3">
             <img src="front3.webp">
             <div class="writing"></div>
-            <h1>Rice & Curry</h1>
+            <h1>Rice & <span style="color: rgb(219, 214, 72);">Curry</span></h1>
             <p>We're Serious about Spices.</p>
             <button>VIEW MENU</button>
             <button>ORDER ONLINE</button>
@@ -56,7 +56,7 @@
 
     <br>
     <div class="outstory">
-        <h1>
+        <h1 id="story">
             OUR STORY
         </h1>
         <p>
