new changes made

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img src="front3.webp">
             <div class="writing"></div>
             <h1>Rice & <span style="color: rgb(219, 214, 72);">Curry</span></h1>
-            <p>We're Serious about Spices.</p>
+            <p>We're Serious about <span style="color: red;">Spices</span>.</p>
             <button>VIEW MENU</button>
             <button>ORDER ONLINE</button>
         </div>
