new changes made

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li>Home</li>
-            <li>Menue</li>
+            <li>Menu</li>
             <li>Order Online</li>
             <li>Reservations</li>
             <img src="logo.webp">
@@ -68,10 +68,15 @@
         </p>
     </div>
 
-    <div class="three">
+<!-- <div class="three">
     <div class="featuredfood">
+        <h1>FEATURED FOOD</h1>
+        <img src="featured1.webp">
+        <img src="featured2.webp">
+        <img src="featured3.webp">
+    </div> -->
 
-    </div>
+    
 </div>
     <script src="main.js"></script>
 
