new changes made

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <img src="front1.webp">
             <div class="writing1">
             <h1>Everest <span style="color: red;">Maya</span> Restaurant</h1>
+            <br><br>
             <p>Everest Maya is proud to bring you the taste of Himalayas, from the footsteps of Everest to food loving neighborhood of Firestone & Longmont Colorado. We are delighted to present you a unique combination of culinary mixtures that are tailored to your liking.</p>
             <button>VIEW MENU</button>
             <button>ORDER ONLINE</button>
@@ -76,6 +77,12 @@
             <img src="featured1.webp">
             <img src="featured2.webp">
             <img src="featured3.webp">
+            <img src="featured1.webp">
+            <img src="featured2.webp">
+            <img src="featured3.webp">
+            <img src="featured1.webp">
+            <img src="featured2.webp">
+            <img src="featured3.webp">
           </div>
     </div>
 
@@ -119,6 +126,11 @@
     
     </div>
 
+    <div class="new1">
+        <h1>DELICIOUS FOOD</h1>
+        <hr>
+        <img src=""
+    </div>
     
 </div>
     <script src="main.js"></script>
